# imp.refactor

./: .gitignore  README.md  flake.nix
nix/: lib.nix
nix/tests/: default.nix
rs/: .gitignore  Cargo.toml
rs/src/: analyzer.rs  cli.rs  lib.rs  main.rs  registry.rs  rewriter.rs  scanner.rs
rs/tests/fixtures/complex-renames/: README.md
rs/tests/fixtures/complex-renames/files/: all-valid.nix  ambiguous.nix  deep-nesting.nix  multi-rename.nix  nested-rename.nix  partial-valid.nix
rs/tests/fixtures/complex-renames/registry/users/bob/: shell.nix
rs/tests/fixtures/false-positives/: edge-cases.nix  known-limitations.nix  should-detect.nix  should-ignore.nix
rs/tests/fixtures/migrate-test/outputs/: config-a.nix  config-b.nix  mixed.nix
