[package]
name = "imp-refactor"
version = "0.1.0"
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
edition = "2024"
description = "Detect and fix broken registry references in Nix projects"

[lib]
name = "imp_refactor"
path = "src/lib.rs"

[[bin]]
name = "imp-refactor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
rnix = "0.12"
rowan = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[dev-dependencies]
insta = "1.44"
tempfile = "3.23"
